--- a/src/main/resources/templates/new.html
+++ b/src/main/resources/templates/new.html
@@ -12,34 +12,34 @@
         <img src="/img/logo_elca.png"/>
       </div>
       <div class="col-md-8">
-          <h3><strong>Project Information Management</strong></h3>
+          <h3><strong th:text="#{label.project_name}"></strong></h3>
       </div>
     </div>
     <div class="col-md-4 text-right pad-right40 mar-top25"> EN | <a href="#" class="new-menu-style">FR</a></div>
-    <div class="col-md-2 mar-top25"><a href="#" class="new-menu-style">Help</a>&nbsp&nbsp&nbsp&nbsp&nbsp Log out</div>
+    <div class="col-md-2 mar-top25"><a href="#" class="new-menu-style" th:text="#{laebl.help}"></a>&nbsp&nbsp&nbsp&nbsp&nbsp Log out</div>
     
   </div>
 </header>
 <div class="col-md-3" id="side-bar">
   <div class="col-md-5"></div>
   <div class="col-md-7">
-    <br><br>
-    <a href="#" class="new-menu-style">Projects list</a><br><br><br>
-    <a href="#" class="new-menu-style">New</a><br><br>
-    <a href="#" class="project-menu-style">Project</a><br><br>
-    <a>Customer</a><br><br>
-    <a>Supplier</a><br><br>
+   <br><br>
+    <a href="#" class="new-menu-style" th:text="#{label.menu.project_list}"></a><br><br><br>
+    <a href="#" class="new-menu-style" th:text="#{label.menu.new}"></a><br><br>
+    <a href="#" class="project-menu-style" th:text="#{label.menu.project}"></a><br><br>
+    <a th:text="#{label.menu.customer}"></a><br><br>
+    <a th:text="#{label.menu.supplier}"></a><br><br>
   </div>
   
 </div>
 <div class="col-md-7" id="main-content">
 <br>
-  <h4>New Project</h4>
+  <h4 th:text="#{label.title.project_new}"></h4>
   <hr>
   <form class="form-horizontal mar-lef20">
     <div class="form-group pad-top-bot10">
       <div class="col-md-3">
-        <label for="pro_num">Project Number <span class="mandatory">*</span></label>
+        <label for="pro_num" th:text="#{project.project_number}"> <span class="mandatory">*</span></label>
       </div>
       <div class="col-md-3">
       <input type="text" id="pro_num" class="form-control in-txt-cus">
@@ -47,7 +47,7 @@
     </div>
     <div class="form-group pad-top-bot10">
       <div class="col-md-3">
-        <label for="pro_num">Project Name <span class="mandatory">*</span></label>
+        <label for="pro_num" th:text="#{project.project_name}"><span class="mandatory">*</span></label>
       </div>
       <div class="col-md-9">
       <input type="text" id="pro_num" class="form-control in-txt-cus">
@@ -55,7 +55,7 @@
     </div>
     <div class="form-group pad-top-bot10">
       <div class="col-md-3">
-        <label for="pro_num">Customer <span class="mandatory">*</span></label>
+        <label for="pro_num" th:text="#{project.customer}"><span class="mandatory">*</span></label>
       </div>
       <div class="col-md-9">
       <input type="text" id="pro_num" class="form-control in-txt-cus">
@@ -67,7 +67,7 @@
       </div>
       <div class="col-md-3">
         <select class="form-control in-txt-cus" style="font-size:12px;">
-          <option value="" selected>Group</option>
+          <option value="" selected >Group</option>
           <option value="CIM">CIM</option>
           <option value="JAV">JAVA</option>
           <option value="SEC">Secutix</option>
@@ -77,7 +77,7 @@
     </div>
     <div class="form-group pad-top-bot10">
       <div class="col-md-3">
-        <label for="pro_num">Members</label>
+        <label for="pro_num"  th:text="#{project.member}"></label>
       </div>
       <div class="col-md-9">
       <input type="text" id="pro_num" class="form-control in-txt-cus">
@@ -85,20 +85,20 @@
     </div>
     <div class="form-group pad-top-bot10">
       <div class="col-md-3">
-        <label for="pro_num">Status <span class="mandatory">*</span></label>
+        <label for="pro_num" th:text="#{project.status}"> <span class="mandatory">*</span></label>
       </div>
       <div class="col-md-3">
         <select class="form-control in-txt-cus" style="font-size:12px;">
-          <option value="NEW">New</option>
-          <option value="PLA">Planned</option>
-          <option value="INP">In Progress</option>
-          <option value="FIN">Finished</option>
+          <option value="NEW" th:text="#{project.status.new}"></option>
+          <option value="PLA" th:text="#{project.status.planned}"></option>
+          <option value="INP" th:text="#{project.status.in_progress}"></option>
+          <option value="FIN" th:text="#{project.status.finished}"></option>
         </select>
       </div>
     </div>
     <div class="form-group pad-top-bot10">
       <div class="col-md-3">
-        <label for="pro_num">Start date <span class="mandatory">*</span></label>
+        <label for="pro_num" th:text="#{project.start_date}"><span class="mandatory">*</span></label>
       </div>
       <div class="col-md-3">
         <div class="form-control-cus in-txt-cus">
@@ -109,7 +109,7 @@
       </div>
     
       <div class="col-md-3 text-center">
-        <label for="pro_num">End date</label>
+        <label for="pro_num" th:text="#{project.end_date}"></label>
       </div>
       <div class="col-md-3">
         <div class="form-control-cus in-txt-cus">
@@ -123,11 +123,11 @@
   <div class="row text-right">
     <div class="col-md-5"></div>
     <div class="col-md-3">
-      <button class="btn btn-default btn-block">Cancel</button>
+      <button class="btn btn-default btn-block" th:text="#{button.cancel}"></button>
     </div>
     <div class="col-md-1"></div>
     <div class="col-md-3">
-      <button class="btn btn-primary btn-block">Create Project</button>
+      <button class="btn btn-primary btn-block" th:text="#{button.project_create}"></button>
     </div>
   </div>
 </div>
