--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -35,7 +35,7 @@
 </div>
 <div class="col-md-8" id="main-content">
 <br>
-  <h4 th:text="#{label.title.project_new}"></h4>
+  <h4 th:text="#{label.title.project_list}"></h4>
   <hr>
   <form class="form-inline" id="form-search">
     <div class="col-md-4-cus">
