--- a/src/main/resources/templates/new.html
+++ b/src/main/resources/templates/new.html
@@ -15,8 +15,8 @@
           <h3><strong th:text="#{label.project_name}"></strong></h3>
       </div>
     </div>
-    <div class="col-md-4 text-right pad-right40 mar-top25"> EN | <a href="#" class="new-menu-style">FR</a></div>
-    <div class="col-md-2 mar-top25"><a href="#" class="new-menu-style" th:text="#{laebl.help}"></a>&nbsp&nbsp&nbsp&nbsp&nbsp Log out</div>
+    <div class="col-md-4 text-right pad-right40 mar-top25">  <a href="#" id="en_lang" class="new-menu-style">EN</a> | <a href="#" id="fr_lang" class="new-menu-style">FR</a></div>
+    <div class="col-md-2 mar-top25"><a th:href="@{/help}" class="new-menu-style" th:text="#{laebl.help}"></a><a style="margin-left:20px" href="#" th:text="#{label.logout}"></a></div>
     
   </div>
 </header>
@@ -24,10 +24,10 @@
   <div class="col-md-5"></div>
   <div class="col-md-7">
    <br><br>
-    <a th:href="@{list}" class="new-menu-style" th:text="#{label.menu.project_list}"></a><br><br><br>
-    <a th:href="@{new}" class="new-menu-style" th:text="#{label.menu.new}"></a><br><br>
-    <a href="#" class="project-menu-style" th:text="#{label.menu.project}"></a><br><br>
-    <a th:text="#{label.menu.customer}"></a><br><br>
+    <a th:href="@{/project/list}" class="new-menu-style" th:text="#{label.menu.project_list}"></a><br><br><br>
+    <a th:href="@{/project/new}" class="new-menu-style" th:text="#{label.menu.new}"></a><br><br>
+    <a th:href="@{/project/list}" class="project-menu-style" th:text="#{label.menu.project}"></a><br><br>
+    <a th:href="@{/customer/list}" th:text="#{label.menu.customer}"></a><br><br>
     <a th:text="#{label.menu.supplier}"></a><br><br>
   </div>
   
@@ -37,6 +37,7 @@
   <h4 th:text="#{label.title.project_new}" th:if="${type=='new'}"></h4>
   <h4 th:text="#{label.title.project_edit}" th:if="${type=='edit'}"></h4>
   <hr>
+  <input type="hidden" id="have_errors" th:value="${errorValidate}">
   <div class="alert alert-danger" th:if="${errorValidate}">
     <strong th:text="#{error.validate}"></strong>
   </div>
@@ -46,9 +47,10 @@
         <label for="pro_num"><span th:text="#{project.project_number}"></span> <span class="mandatory">*</span></label>
       </div>
       <div class="col-md-3">
-        <input type="text" id="pro_num" th:field="*{projectNumber}" th:readonly="${type=='edit'?true:false}" class="form-control in-txt-cus">
+        <input type="number" maxlength="4" required="required" id="pro_num" th:field="*{projectNumber}" th:readonly="${type=='edit'?true:false}" class="form-control in-txt-cus">
       </div>
       <div class="col-md-6">
+        <input id="sumit_exists" type="hidden" th:value="${existProject}">
         <span id="error_number_project" class="mandatory" th:text="#{error.projectexists}"></span>
       </div>
     </div>
@@ -57,7 +59,7 @@
         <label for="pro_name"><span th:text="#{project.project_name}"></span><span class="mandatory">*</span></label>
       </div>
       <div class="col-md-9">
-      <input type="text" id="pro_name" th:field="*{name}" class="form-control in-txt-cus">
+      <input type="text" id="pro_name" maxlength="50" th:field="*{name}" class="form-control in-txt-cus">
       </div>
     </div>
     <div class="form-group pad-top-bot10">
@@ -65,7 +67,7 @@
         <label for="pro_customer"><span th:text="#{project.customer}"></span><span class="mandatory">*</span></label>
       </div>
       <div class="col-md-9">
-      <input type="text" id="pro_customer" th:field="*{customer}" class="form-control in-txt-cus">
+      <input type="text" id="pro_customer" maxlength="50" th:field="*{customer}" class="form-control in-txt-cus">
       </div>
     </div>
     <div class="form-group pad-top-bot10">
@@ -73,15 +75,11 @@
         <label for="pro_group"><span th:text="#{project.group}"></span><span class="mandatory">*</span></label>
       </div>
       <div class="col-md-3">
-        <select class="form-control in-txt-cus" style="font-size:12px;" th:field="*{groupId}">
+        <select class="form-control in-txt-cus" style="font-size:12px;" id="pro_group" th:field="*{groupId}">
           <option value="" selected th:text="#{project.group}"></option>
           <th:foreach  th:each="gr : ${groupProject}">
             <option th:value="${gr.id}" th:text="${gr.name}"></option>
           </th:foreach>
-          <!-- <option value="1" th:text="#{group.name}">CIM</option>
-          <option value="2" th:text="#{group.name}">JAVA</option>
-          <option value="3" th:text="#{group.name}">Secutix</option>
-          <option value="4" th:text="#{group.name}">.NET</option> -->
         </select>
       </div>
     </div>
@@ -90,7 +88,10 @@
         <label for="pro_member"  th:text="#{project.member}"></label>
       </div>
       <div class="col-md-9">
-      <input type="text" id="pro_member" name="project_member" th:value="${listMember}" class="form-control in-txt-cus">
+        <input type="text" id="pro_member" name="project_member" th:value="${listMember}" class="form-control in-txt-cus">
+        <div class="mandatory" id="error_member" style="display:none">
+        <span th:text="#{error.membernotxists}"></span><span>:{</span><span id="list_visa_er"></span><span>}.</span>
+        </div>        
       </div>
     </div>
     <div class="form-group pad-top-bot10">
@@ -98,11 +99,8 @@
         <label for="pro_status"><span th:text="#{project.status}"></span> <span class="mandatory">*</span></label>
       </div>
       <div class="col-md-3">
-        <select class="form-control in-txt-cus" style="font-size:12px;" th:field="*{status}" th:if="${type=='new'}">
-          <option value="NEW" th:text="#{project.status.new}"></option>          
-        </select>
-        <select class="form-control in-txt-cus" style="font-size:12px;" th:field="*{status}" th:unless="${type=='new'}">
-          <option value="NEW" th:text="#{project.status.new}"></option>
+        <select class="form-control in-txt-cus" id="pro_status" style="font-size:12px;" th:field="*{status}">
+          <option value="NEW" th:text="#{project.status.new}" selected></option>
           <option value="PLA" th:text="#{project.status.planned}"></option>
           <option value="INP" th:text="#{project.status.in_progress}"></option>
           <option value="FIN" th:text="#{project.status.finished}"></option>
@@ -114,8 +112,8 @@
         <label for="pro_startdate"><span th:text="#{project.start_date}"></span><span class="mandatory">*</span></label>
       </div>
       <div class="col-md-3">
-        <div class="form-control-cus in-txt-cus">
-          <input type="text" id="pro_startdate" th:field="*{startDate}" class="date-cus">
+        <div class="form-control-cus in-txt-cus" id="pro_startdiv">
+          <input type="text" id="pro_startdate" th:field="*{startDate}" class="date-cus" pattern="[0-9]{4}-(0[1-9]|1[012])-(0[1-9]|1[0-9]|2[0-9]|3[01])">
           <a href="#"><img src="/img/u89.png"/></a>
         </div>
       
@@ -125,8 +123,8 @@
         <label for="pro_enddate" th:text="#{project.end_date}"></label>
       </div>
       <div class="col-md-3">
-        <div class="form-control-cus in-txt-cus">
-          <input type="text" id="pro_enddate" th:field="*{endDate}" class="date-cus">
+        <div class="form-control-cus in-txt-cus" id="pro_enddiv">
+          <input type="text" id="pro_enddate" th:field="*{endDate}" class="date-cus" pattern="[0-9]{4}-(0[1-9]|1[012])-(0[1-9]|1[0-9]|2[0-9]|3[01])">
           <a href="#"><img src="/img/u89.png"/></a>
         </div>
       </div>
@@ -135,7 +133,7 @@
   <div class="row text-right">
     <div class="col-md-5"></div>
     <div class="col-md-3">
-      <a class="btn btn-default btn-block" th:href="@{list}" th:text="#{button.cancel}"></a>
+      <a class="btn btn-default btn-block" th:href="@{/project/list}" th:text="#{button.cancel}"></a>
     </div>
     <div class="col-md-1"></div>
     <div class="col-md-3">
