fix and add paging backend

--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -29,7 +29,7 @@
     <br><br>
     <a th:href="@{/project/list}" class="new-menu-style" th:text="#{label.menu.project_list}"></a><br><br><br>
     <a th:href="@{/project/new}" class="new-menu-style" th:text="#{label.menu.new}"></a><br><br>
-    <a th:href="@{/project/list}" class="project-menu-style" th:text="#{label.menu.project}"></a><br><br>
+    <a th:href="@{/project/new}" class="project-menu-style" th:text="#{label.menu.project}"></a><br><br>
     <a th:href="@{/customer/list}" th:text="#{label.menu.customer}"></a><br><br>
     <a th:text="#{label.menu.supplier}"></a><br><br>
   </div>
