--- a/src/main/resources/templates/new.html
+++ b/src/main/resources/templates/new.html
@@ -28,7 +28,7 @@
    <br><br>
     <a th:href="@{/project/list}" class="new-menu-style" th:text="#{label.menu.project_list}"></a><br><br><br>
     <a th:href="@{/project/new}" class="new-menu-style" th:text="#{label.menu.new}"></a><br><br>
-    <a th:href="@{/project/list}" class="project-menu-style" th:text="#{label.menu.project}"></a><br><br>
+    <a th:href="@{/project/new}" class="project-menu-style" th:text="#{label.menu.project}"></a><br><br>
     <a th:href="@{/customer/list}" th:text="#{label.menu.customer}"></a><br><br>
     <a th:text="#{label.menu.supplier}"></a><br><br>
   </div>
@@ -49,6 +49,7 @@
         <label for="pro_num"><span th:text="#{project.project_number}"></span> <span class="mandatory">*</span></label>
       </div>
       <div class="col-md-4">
+        <input type="hidden" th:field="*{version}">
         <input type="number" max="9999" min="0" required="required" id="pro_num" autofocus th:field="*{projectNumber}" th:readonly="${type=='edit'?true:false}" class="form-control in-txt-cus">
       </div>
       <div class="col-md-6">
