--- a/src/main/resources/templates/new.html
+++ b/src/main/resources/templates/new.html
@@ -18,7 +18,7 @@
       </div>
     </div>
     <div class="col-md-4 text-right pad-right40 mar-top25">  <a href="#" id="en_lang" class="new-menu-style">EN</a> | <a href="#" id="fr_lang" class="new-menu-style">FR</a></div>
-    <div class="col-md-2 mar-top25"><a th:href="@{/help}" class="new-menu-style" th:text="#{laebl.help}"></a><a style="margin-left:20px" href="#" th:text="#{label.logout}"></a></div>
+    <div class="col-md-2 mar-top25"><a th:href="@{/help}" class="new-menu-style cursor-pointer" th:text="#{laebl.help}"></a><a class="cursor-pointer" style="margin-left:20px" href="#" th:text="#{label.logout}"></a></div>
     
   </div>
 </header>
@@ -43,6 +43,9 @@
   <div class="alert alert-danger" th:if="${errorValidate}">
     <strong th:text="#{error.validate}"></strong>
   </div>
+  <div class="alert alert-danger" th:if="${errorUpdate}">
+    <strong th:text="#{error.update_concurrent}"></strong>
+  </div>
   <form class="form-horizontal mar-lef20" th:action="${type=='new'?'create':'update'}" th:object="${project}" method="post">
     <div class="form-group pad-top-bot10">
       <div class="col-md-2">
@@ -54,7 +57,7 @@
       </div>
       <div class="col-md-6">
         <input id="sumit_exists" type="hidden" th:value="${existProject}">
-        <span id="error_number_project" class="mandatory" th:text="#{error.projectexists}"></span>
+        <span id="error_number_project" class="mandatory display-none" th:text="#{error.projectexists}"></span>
       </div>
     </div>
     <div class="form-group pad-top-bot10">
@@ -91,7 +94,7 @@
         <label for="pro_member"  th:text="#{project.member}"></label>
       </div>
       <div class="col-md-10">
-        <input type="text" id="pro_member" name="project_member" th:value="${listMember}" class="form-control in-txt-cus">
+        <input type="text" id="pro_member" name="project_member" placeholder="XXX,XXX,.." th:value="${listMember}" class="form-control in-txt-cus">
         <div class="mandatory" id="error_member" style="display:none">
         <span th:text="#{error.membernotxists}"></span><span>: {</span><span id="list_visa_er"></span><span>}.</span>
         </div>        
@@ -116,9 +119,9 @@
       </div>
       <div class="col-md-4">
         <div class="form-control-cus in-txt-cus" id="pro_startdiv">
-          <input type="text" id="pro_startdate" th:field="*{startDate}" class="date-cus" 
+          <input type="text" id="pro_startdate" th:field="*{startDate}" class="date-cus" placeholder="YYYY-MM-DD" 
           pattern="(?:19|20)[0-9]{2}-(?:(?:0[1-9]|1[0-2])-(?:0[1-9]|1[0-9]|2[0-9])|(?:(?!02)(?:0[1-9]|1[0-2])-(?:30))|(?:(?:0[13578]|1[02])-31))">
-          <a href="#"><img src="/img/u89.png"/></a>
+          <a><img src="/img/u89.png"/></a>
         </div>
       
       </div>
@@ -128,9 +131,9 @@
       </div>
       <div class="col-md-4">
         <div class="form-control-cus in-txt-cus" id="pro_enddiv">
-          <input type="text" id="pro_enddate" th:field="*{endDate}" class="date-cus"
+          <input type="text" id="pro_enddate" th:field="*{endDate}" class="date-cus" placeholder="YYYY-MM-DD"
            pattern="(?:19|20)[0-9]{2}-(?:(?:0[1-9]|1[0-2])-(?:0[1-9]|1[0-9]|2[0-9])|(?:(?!02)(?:0[1-9]|1[0-2])-(?:30))|(?:(?:0[13578]|1[02])-31))">
-          <a href="#"><img src="/img/u89.png"/></a>
+          <a><img src="/img/u89.png"/></a>
         </div>
       </div>
     </div>
