done with sequence and add data

--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -110,8 +110,8 @@
       <strong id="counter_select"></strong> <strong th:text="#{notify.item.selected}"></strong>
     </div>
     <div class="col-md-6 text-right text-danger">
-      <a href="#" id="btn_delete"><strong class="text-danger" th:text="#{notify.item.delete}"></strong></a>
-      <img src="/img/delete_icon.png">  
+      <a href="" id="btn_delete"><strong class="text-danger cursor-pointer" th:text="#{notify.item.delete}"></strong></a>
+      <a href="" id="btn_delete_all" class= "cursor-pointer"><img src="/img/delete_icon.png"></a>  
     </div>
   </div>
   <div id="pagin" class="text-right">
