--- a/src/main/resources/templates/new.html
+++ b/src/main/resources/templates/new.html
@@ -10,19 +10,19 @@
 <header id="header">
   <div class="row">
     <div class="col-md-6">
-      <div class="col-md-4 text-right">
+      <div class="col-md-3 text-right">
         <img src="/img/logo_elca.png"/>
       </div>
-      <div class="col-md-8">
+      <div class="col-md-9">
           <h3><strong th:text="#{label.project_name}"></strong></h3>
       </div>
     </div>
-    <div class="col-md-4 text-right pad-right40 mar-top25">  <a href="#" id="en_lang" class="new-menu-style">EN</a> | <a href="#" id="fr_lang" class="new-menu-style">FR</a></div>
-    <div class="col-md-2 mar-top25"><a th:href="@{/help}" class="new-menu-style cursor-pointer" th:text="#{laebl.help}"></a><a class="cursor-pointer" style="margin-left:20px" href="#" th:text="#{label.logout}"></a></div>
+    <div class="col-md-3 text-right pad-right40 mar-top25">  <a href="#" id="en_lang" class="new-menu-style">EN</a> | <a href="#" id="fr_lang" class="new-menu-style">FR</a></div>
+    <div class="col-md-3 mar-top25"><a th:href="@{/help}" class="new-menu-style cursor-pointer" th:text="#{laebl.help}"></a><a class="cursor-pointer" style="margin-left:20px" href="#" th:text="#{label.logout}"></a></div>
     
   </div>
 </header>
-<div class="col-md-3" id="side-bar">
+<div class="col-md-2" id="side-bar">
   <div class="col-md-5"></div>
   <div class="col-md-7">
    <br><br>
@@ -94,7 +94,7 @@
         <label for="pro_member"  th:text="#{project.member}"></label>
       </div>
       <div class="col-md-10">
-        <input type="text" id="pro_member" name="project_member" placeholder="XXX,XXX,.." th:value="${listMember}" class="form-control in-txt-cus">
+        <input type="text" id="pro_member" name="project_member" placeholder="xxx,yyy,.." th:value="${listMember}" class="form-control in-txt-cus">
         <div class="mandatory" id="error_member" style="display:none">
         <span th:text="#{error.membernotxists}"></span><span>: {</span><span id="list_visa_er"></span><span>}.</span>
         </div>        
@@ -153,7 +153,7 @@
   </form>
   
 </div>
-<div class="col-md-2"></div>
+<div class="col-md-3"></div>
 <footer></footer>
 <script type="text/javascript" src="/js/jquery-3.3.1.min.js"></script>
 <script type="text/javascript" src="/js/bootstrap.js"></script>
